# futures

crates/codec/: Cargo.toml  LICENSE  README.md
crates/codec/benches/: lines.rs
crates/codec/src/: lib.rs
crates/codec/src/codec/: bytes.rs  cbor.rs  json.rs  length.rs  limit.rs  lines.rs  mod.rs
crates/codec/tests/: bytes.rs  length_delimited.rs  lines.rs  read.rs  write.rs
crates/sink/: Cargo.toml  README.md
crates/sink/src/: lib.rs
crates/util/: Cargo.toml  README.md
crates/util/src/: lib.rs  sink.rs
