[package]
name = "yz-futures-codec"
edition = "2018"
version = "0.0.0"
authors = [
    "Matt Hunzinger <matthunz2@gmail.com>",
    "Erik Zscheile <zseri.devel@ytrizja.de>"
]
description = "Utilities for encoding and decoding frames using `async/await`"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/YZITE/futures"
keywords = ["future", "futures", "async", "codec"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
json = [ "serde", "serde_json" ]
cbor = [ "serde", "serde_cbor" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
bytes = "0.5"
futures-core = "0.3"
futures-io = "0.3"
memchr = "2.2"
pin-project = "1.0"
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
optional = true
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_cbor]
version = "0.11"
optional = true

[dependencies.yz-futures-sink]
version = "0.1"
path = "../sink"

[dev-dependencies]
futures-lite = "1.11"

[dev-dependencies.futures-util]
version = "0.3"
features = ["io"]

[dev-dependencies.yz-futures-util]
version = "0.0"
path  = "../util"
