[package]
name = "yz-futures-util"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["future", "futures", "async"]
categories = ["asynchronous"]

[dependencies]
futures-core = "0.3"
futures-micro = "0.3.1"

[dependencies.yz-futures-sink]
version = "0.1"
path = "../sink"
